@@ -7,19 +7,6 @@ interface {
 
 device {
 	minor = 0
-	name = "hp1630"
-	pad = 7
-	eos = 0xa
-	set-reos = no
-	set-bin = no
-	set-xeos = no
-	set-eot = yes
-	timeout = T30s
-
-}
-
-device {
-	minor = 0
 	name = "hp3455"
 	pad = 1
 	eos = 0xa
@@ -32,14 +19,26 @@ device {
 
 device {
 	minor = 0
-	name = "hp3457"
-	pad = 22
+	name = "hp54645"
+	pad = 4
 	eos = 0xa
-	set-reos = yes
+	set-reos = no
 	set-bin = no
 	set-xeos = no
 	set-eot = yes
-	timeout = T3s
+	timeout = T30s
+}
+
+device {
+	minor = 0
+	name = "tek2230"
+	pad = 2
+	eos = 0xa
+	set-reos = no
+	set-bin = no
+	set-xeos = no
+	set-eot = yes
+	timeout = T30s
 }
 
 device {
@@ -52,6 +51,18 @@ device {
 	timeout = T30s 
 }
 
+device {
+	minor = 0
+	name = "hp1630"
+	pad = 7
+	eos = 0xa
+	set-reos = no
+	set-bin = no
+	set-xeos = no
+	set-eot = yes
+	timeout = T30s
+
+}
 
 device {
 	minor = 0
@@ -77,3 +88,26 @@ device {
 	timeout = T30s
 }
 
+device {
+	minor = 0
+	name = "hp3457"
+	pad = 22
+	eos = 0xa
+	set-reos = yes
+	set-bin = no
+	set-xeos = no
+	set-eot = yes
+	timeout = T3s
+}
+
+device {
+	minor = 0
+	name = "hp3488"
+	pad = 8
+	eos = 0xa
+	set-reos = yes
+	set-bin = no
+	set-xeos = no
+	set-eot = yes
+	timeout = T3s
+}
